--- a/btsp/btsp.vcxproj.filters
+++ b/btsp/btsp.vcxproj.filters
@@ -25,4 +25,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="brutes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
