--- a/btsp/btsp.vcxproj
+++ b/btsp/btsp.vcxproj
@@ -143,6 +143,11 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="utes.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="brutes.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="utes.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
